# tedcoin-immutable-voting-system

./: CMakeLists.txt  Makefile.am  README.md  Tedcoin-qt.pro  compile-tedcoin.sh  configure.ac
contrib/debian/: changelog  control  copyright  mintcoin-qt.desktop  mintcoin-qt.install  mintcoin-qt.lintian-overrides  mintcoin-qt.protocol  mintcoind.examples  mintcoind.install  mintcoind.lintian-overrides  mintcoind.manpages  rules  watch
contrib/debian/examples/: mintcoin.conf
contrib/debian/manpages/: mintcoin.conf.5  mintcoind.1
contrib/gitian-descriptors/: gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win.yml
contrib/gitian-downloader/: laanwj-key.pgp  richardsmith-key.gpg  scottnadal-key.gpg  sipa-key.pgp
contrib/macdeploy/: DS_Store  README.md  detached-sig-apply.sh  detached-sig-create.sh  macdeployqtplus
doc/: Doxyfile  README  build-osx.md  build-unix.md  gitian-building.md
share/: genbuild.sh  setup.nsi.in
share/pixmaps/: bitcoin32.xpm  bitcoin80.xpm
share/qt/: Info.plist.in  make_mining.py  make_spinner.py  make_windows_icon.sh
src/: Makefile.am  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrman.cpp  aes_helper.c  alert.cpp  alert.h  allocators.h  base58.h  bignum.h  bip38.cpp  bip38.h  bitcoind-res.rc  bitcoind.cpp  bitcoinrpc.cpp  bitcoinrpc.h  blake.c  bmw.c  checkpoints.cpp  checkpoints.h  clientversion.cpp  clientversion.h  compat.h  crypter.cpp  crypter.h  cubehash.c  db.cpp  db.h  echo.c  groestl.c  hashblock.h  init.cpp  init.h  jh.c  keccak.c  kernel.cpp  kernel.h  key.cpp  key.h  (+63 more)
src/json/: json_spirit_error_position.h  json_spirit_reader_template.h  json_spirit_stream_reader.h  json_spirit_utils.h  json_spirit_value.cpp  json_spirit_value.h  json_spirit_writer.cpp  json_spirit_writer.h  json_spirit_writer_template.h
src/qt/: addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  askpassphrasedialog.cpp  askpassphrasedialog.h  bip38tooldialog.cpp  bip38tooldialog.h  bitcoin.cpp  bitcoin.qrc  bitcoinamountfield.cpp  bitcoingui.cpp  bitcoingui.h  bitcoinstrings.cpp  bitcoinunits.cpp  blockbrowser.cpp  blockbrowser.h  calcdialog.cpp  clientmodel.cpp  coincontroldialog.cpp  coincontroldialog.h  createproposaldialog.cpp  createproposaldialog.h  editaddressdialog.cpp  guiconstants.h  guiutil.cpp  guiutil.h  macnotificationhandler.h  macnotificationhandler.mm  networkstyle.cpp  networkstyle.h  notificator.h  optionsdialog.cpp  optionsmodel.cpp  overviewpage.cpp  paymentserver.cpp  proposalsdialog.cpp  proposalsdialog.h  qvalidatedlineedit.cpp  rpcconsole.cpp  scicon.cpp  (+14 more)
src/qt/forms/: aboutdialog.ui  addressbookpage.ui  bip38tooldialog.ui  blockbrowser.ui  calcdialog.ui  charitydialog.ui  coincontroldialog.ui  createproposaldialog.ui  optionsdialog.ui  overviewpage.ui  proposalsdialog.ui  sendcoinsdialog.ui  setvotesdialog.ui  signverifymessagedialog.ui  ui_bip38tooldialog.h  votingdialog.ui
src/qt/locale/: bitcoin_en.ts
src/qt/res/: bitcoin-qt.rc
src/qt/res/icons/: Icons.txt  Thumbs.db  add.xcf  address-book.xcf  bitcoin.icns  blexp.xcf  chains.xcf  clocks.xcf  configure.xcf  connect.xcf  debugwindow.xcf  edit.xcf  editcopy.xcf  editcopypaste.xcf  export.xcf  history.xcf  key.xcf  lock.xcf  mining.xcf  notsynced.xcf  overview.xcf  qrcode.xcf  quit.xcf  receive.xcf  s4c.xcf  save.xcf  send.xcf  star.xcf  transaction0.xcf  transaction2.xcf  tx_inout.xcf
src/qt/res/themes/: readme
src/qt/res/themes/BlueLights/: styles.qss
src/qt/res/themes/Celestial/: styles.qss
src/qt/res/themes/Default/: styles.qss
src/qt/res/themes/HyperBlue/: styles.qss
src/qt/res/themes/Magma/: styles.qss
src/qt/res/themes/PoloniexDay/: styles.qss
src/qt/res/themes/PoloniexNight/: styles.qss
src/test/: voting_tests.cpp
src/test/data/: base58_keys_invalid.json  base58_keys_valid.json
