cmake_minimum_required(VERSION 3.9)
project(Tedcoin)

set(CMAKE_CXX_STANDARD 11)

add_executable(Tedcoin
        src/config/bitcoin-config.h
        src/json/json_spirit.h
        src/json/json_spirit_error_position.h
        src/json/json_spirit_reader.cpp
        src/json/json_spirit_reader.h
        src/json/json_spirit_reader_template.h
        src/json/json_spirit_stream_reader.h
        src/json/json_spirit_utils.h
        src/json/json_spirit_value.cpp
        src/json/json_spirit_value.h
        src/json/json_spirit_writer.cpp
        src/json/json_spirit_writer.h
        src/json/json_spirit_writer_template.h
        src/obj/build.h
        src/qt/forms/ui_aboutdialog.h
        src/qt/forms/ui_addressbookpage.h
        src/qt/forms/ui_askpassphrasedialog.h
        src/qt/forms/ui_bip38tooldialog.h
        src/qt/forms/ui_blockbrowser.h
        src/qt/forms/ui_calcdialog.h
        src/qt/forms/ui_charitydialog.h
        src/qt/forms/ui_coincontroldialog.h
        src/qt/forms/ui_editaddressdialog.h
        src/qt/forms/ui_optionsdialog.h
        src/qt/forms/ui_overviewpage.h
        src/qt/forms/ui_qrcodedialog.h
        src/qt/forms/ui_rpcconsole.h
        src/qt/forms/ui_sendcoinsdialog.h
        src/qt/forms/ui_sendcoinsentry.h
        src/qt/forms/ui_signverifymessagedialog.h
        src/qt/forms/ui_transactiondescdialog.h
        src/qt/test/moc_uritests.cpp
        src/qt/test/test_main.cpp
        src/qt/test/uritests.cpp
        src/qt/test/uritests.h
        src/qt/aboutdialog.cpp
        src/qt/aboutdialog.h
        src/qt/addressbookpage.cpp
        src/qt/addressbookpage.h
        src/qt/addresstablemodel.cpp
        src/qt/addresstablemodel.h
        src/qt/askpassphrasedialog.cpp
        src/qt/askpassphrasedialog.h
        src/qt/bip38tooldialog.cpp
        src/qt/bip38tooldialog.h
        src/qt/bitcoin.cpp
        src/qt/bitcoinaddressvalidator.cpp
        src/qt/bitcoinaddressvalidator.h
        src/qt/bitcoinamountfield.cpp
        src/qt/bitcoinamountfield.h
        src/qt/bitcoingui.cpp
        src/qt/bitcoingui.h
        src/qt/bitcoinstrings.cpp
        src/qt/bitcoinunits.cpp
        src/qt/bitcoinunits.h
        src/qt/blockbrowser.cpp
        src/qt/blockbrowser.h
        src/qt/calcdialog.cpp
        src/qt/calcdialog.h
        src/qt/charitydialog.cpp
        src/qt/charitydialog.h
        src/qt/clientmodel.cpp
        src/qt/clientmodel.h
        src/qt/coincontroldialog.cpp
        src/qt/coincontroldialog.h
        src/qt/coincontroltreewidget.cpp
        src/qt/coincontroltreewidget.h
        src/qt/csvmodelwriter.cpp
        src/qt/csvmodelwriter.h
        src/qt/editaddressdialog.cpp
        src/qt/editaddressdialog.h
        src/qt/guiconstants.h
        src/qt/guiutil.cpp
        src/qt/guiutil.h
        src/qt/macdockiconhandler.h
        src/qt/macnotificationhandler.h
        src/qt/moc_aboutdialog.cpp
        src/qt/moc_addressbookpage.cpp
        src/qt/moc_addresstablemodel.cpp
        src/qt/moc_askpassphrasedialog.cpp
        src/qt/moc_bip38tooldialog.cpp
        src/qt/moc_bitcoinaddressvalidator.cpp
        src/qt/moc_bitcoinamountfield.cpp
        src/qt/moc_bitcoingui.cpp
        src/qt/moc_bitcoinunits.cpp
        src/qt/moc_blockbrowser.cpp
        src/qt/moc_calcdialog.cpp
        src/qt/moc_charitydialog.cpp
        src/qt/moc_clientmodel.cpp
        src/qt/moc_coincontroldialog.cpp
        src/qt/moc_coincontroltreewidget.cpp
        src/qt/moc_csvmodelwriter.cpp
        src/qt/moc_editaddressdialog.cpp
        src/qt/moc_guiutil.cpp
        src/qt/moc_macdockiconhandler.cpp
        src/qt/moc_macnotificationhandler.cpp
        src/qt/moc_monitoreddatamapper.cpp
        src/qt/moc_notificator.cpp
        src/qt/moc_optionsdialog.cpp
        src/qt/moc_optionsmodel.cpp
        src/qt/moc_overviewpage.cpp
        src/qt/moc_paymentserver.cpp
        src/qt/moc_qrcodedialog.cpp
        src/qt/moc_qvalidatedlineedit.cpp
        src/qt/moc_qvaluecombobox.cpp
        src/qt/moc_rpcconsole.cpp
        src/qt/moc_sendcoinsdialog.cpp
        src/qt/moc_sendcoinsentry.cpp
        src/qt/moc_signverifymessagedialog.cpp
        src/qt/moc_transactiondesc.cpp
        src/qt/moc_transactiondescdialog.cpp
        src/qt/moc_transactionfilterproxy.cpp
        src/qt/moc_transactiontablemodel.cpp
        src/qt/moc_transactionview.cpp
        src/qt/moc_walletmodel.cpp
        src/qt/monitoreddatamapper.cpp
        src/qt/monitoreddatamapper.h
        src/qt/networkstyle.cpp
        src/qt/networkstyle.h
        src/qt/notificator.cpp
        src/qt/notificator.h
        src/qt/optionsdialog.cpp
        src/qt/optionsdialog.h
        src/qt/optionsmodel.cpp
        src/qt/optionsmodel.h
        src/qt/overviewpage.cpp
        src/qt/overviewpage.h
        src/qt/paymentserver.cpp
        src/qt/paymentserver.h
        src/qt/qrc_bitcoin.cpp
        src/qt/qrcodedialog.cpp
        src/qt/qrcodedialog.h
        src/qt/qvalidatedlineedit.cpp
        src/qt/qvalidatedlineedit.h
        src/qt/qvaluecombobox.cpp
        src/qt/qvaluecombobox.h
        src/qt/rpcconsole.cpp
        src/qt/rpcconsole.h
        src/qt/scicon.cpp
        src/qt/scicon.h
        src/qt/sendcoinsdialog.cpp
        src/qt/sendcoinsdialog.h
        src/qt/sendcoinsentry.cpp
        src/qt/sendcoinsentry.h
        src/qt/signverifymessagedialog.cpp
        src/qt/signverifymessagedialog.h
        src/qt/transactiondesc.cpp
        src/qt/transactiondesc.h
        src/qt/transactiondescdialog.cpp
        src/qt/transactiondescdialog.h
        src/qt/transactionfilterproxy.cpp
        src/qt/transactionfilterproxy.h
        src/qt/transactionrecord.cpp
        src/qt/transactionrecord.h
        src/qt/transactiontablemodel.cpp
        src/qt/transactiontablemodel.h
        src/qt/transactionview.cpp
        src/qt/transactionview.h
        src/qt/walletmodel.cpp
        src/qt/walletmodel.h
        src/secp256k1/src/libsecp256k1-config.h
        src/test/data/base58_encode_decode.json.h
        src/test/data/base58_keys_invalid.json.h
        src/test/data/base58_keys_valid.json.h
        src/test/data/script_invalid.json.h
        src/test/data/script_valid.json.h
        src/test/accounting_tests.cpp
        src/test/allocator_tests.cpp
        src/test/base32_tests.cpp
        src/test/base58_tests.cpp
        src/test/base64_tests.cpp
        src/test/bignum_tests.cpp
        src/test/Checkpoints_tests.cpp
        src/test/DoS_tests.cpp
        src/test/getarg_tests.cpp
        src/test/key_tests.cpp
        src/test/miner_tests.cpp
        src/test/mruset_tests.cpp
        src/test/multisig_tests.cpp
        src/test/netbase_tests.cpp
        src/test/rpc_tests.cpp
        src/test/script_P2SH_tests.cpp
        src/test/script_tests.cpp
        src/test/sigopcount_tests.cpp
        src/test/test_bitcoin.cpp
        src/test/transaction_tests.cpp
        src/test/uint160_tests.cpp
        src/test/uint256_tests.cpp
        src/test/util_tests.cpp
        src/test/voting_tests.cpp
        src/test/wallet_tests.cpp
        src/addrman.cpp
        src/addrman.h
        src/aes_helper.c
        src/alert.cpp
        src/alert.h
        src/allocators.h
        src/base58.h
        src/bignum.h
        src/bip38.cpp
        src/bip38.h
        src/bitcoind.cpp
        src/bitcoinrpc.cpp
        src/bitcoinrpc.h
        src/blake.c
        src/bloom.cpp
        src/bloom.h
        src/bmw.c
        src/checkpoints.cpp
        src/checkpoints.h
        src/clientversion.cpp
        src/clientversion.h
        src/coincontrol.h
        src/compat.h
        src/crypter.cpp
        src/crypter.h
        src/cubehash.c
        src/db.cpp
        src/db.h
        src/echo.c
        src/groestl.c
        src/hashblock.h
        src/init.cpp
        src/init.h
        src/jh.c
        src/keccak.c
        src/kernel.cpp
        src/kernel.h
        src/key.cpp
        src/key.h
        src/keystore.cpp
        src/keystore.h
        src/luffa.c
        src/main.cpp
        src/main.h
        src/mruset.h
        src/net.cpp
        src/net.h
        src/netbase.cpp
        src/netbase.h
        src/noui.cpp
        src/pbkdf2.cpp
        src/pbkdf2.h
        src/protocol.cpp
        src/protocol.h
        src/rpcblockchain.cpp
        src/rpcdump.cpp
        src/rpcmining.cpp
        src/rpcnet.cpp
        src/rpcrawtransaction.cpp
        src/rpcwallet.cpp
        src/script.cpp
        src/script.h
        src/scrypt.cpp
        src/scrypt.h
        src/scrypt_mine.h
        src/serialize.h
        src/shavite.c
        src/simd.c
        src/skein.c
        src/sph_blake.h
        src/sph_bmw.h
        src/sph_cubehash.h
        src/sph_echo.h
        src/sph_groestl.h
        src/sph_jh.h
        src/sph_keccak.h
        src/sph_luffa.h
        src/sph_shavite.h
        src/sph_simd.h
        src/sph_skein.h
        src/sph_types.h
        src/sync.cpp
        src/sync.h
        src/tinyformat.h
        src/ui_interface.h
        src/uint256.h
        src/util.cpp
        src/util.h
        src/version.cpp
        src/version.h
        src/voteobject.cpp
        src/voteobject.h
        src/voteproposal.cpp
        src/voteproposal.h
        src/voteproposalmanager.cpp
        src/voteproposalmanager.h
        src/qt/createproposaldialog.cpp
        src/qt/createproposaldialog.h
        src/qt/votingdialog.cpp
        src/qt/votingdialog.h
        src/qt/setvotesdialog.cpp
        src/qt/setvotesdialog.h
        src/votetally.cpp
        src/votetally.h
        src/wallet.cpp
        src/wallet.h
        src/walletdb.cpp
        src/walletdb.h src/miner.h src/miner.cpp)
